# tauri-plugin-drive

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs
